# qzxing

./: CMakeLists.txt
QZXing/: qmldir
examples/QZXingLive/: main.qml
src/: QZXing.cpp  QZXingFilter.cpp  plugin.cpp  plugin.h
src/zxing/zxing/: CMakeLists.txt
